Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13665

master-2.12 interop: sanity multiple failures

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • None
    • Lustre 2.14.0
    • None
    • 3
    • 9223372036854775807

      As seen in test results https://testing.whamcloud.com/test_sets/1be26bdf-547b-42f4-a478-fb25c7ef5b75 of patch https://review.whamcloud.com/38897, interop testing of master client vs 2.12 server reveals a number of failures in sanity:

      • test_56oc Error: ''/usr/bin/lfs find /mnt/lustre/d56oc.sanity -newerbt 2020-06-11 10:18:07' wrong: found 0, expected 16'
      • test_56od Error: ''/usr/bin/lfs find /mnt/lustre/d56od.sanity -newerbb /mnt/lustre/f56od.sanity.ref ! -newerbb /mnt/lustre/f56od.sanity.negref -type f' wrong: found 14, expected 12'
      • test_165a Error: 'alr_log_add event count was '0', expected 1'
      • test_165b Error: 'alr_log_entry event count was '0', expected 1'
      • test_165d Error: 'bad entry count, got , expected 1'

            adilger Andreas Dilger
            sebastien Sebastien Buisson
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: